--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dotenv-cli": "^2.0.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
-    "ibm-watson": "^4.2.1",
+    "ibm-watson": "5.1.0",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
     "request": "^2.88.0",
