--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   "author": "Rabah Zeineddine",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "cors": "^2.8.5",
@@ -29,12 +33,9 @@
     "ibm-watson": "5.1.0",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
     "request": "^2.88.0",
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "nodemon": "^1.18.9"
+    "swagger-ui-express": "^4.1.2"
   },
   "engines": {
     "node": ">=6.9",
